--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
    </section>
 
    <footer class="foorweendf">
-   <a href="#"> <img src="https://i.ibb.co/jyM2wv9/footer.jpg" class="img-fluid" alt="footer"></a>
+   <a href="#"> 
      
    </footer>
 
